Fixed navbar when collapsed

--- a/app.css
+++ b/app.css
@@ -85,3 +85,10 @@ svg {
         font-size: 3rem;
     }
 }
+
+@media (max-width: 766px){
+    .navbar-collapse.collapsing,
+    .navbar-collapse.show {
+        padding-left: 21px;
+    } 
+}
